# ai-audit-suite

./: .env.example  .gitignore  API_RESPONSE_PATH.md  API_STATUS.md  AUTHENTICATION_FIXES.md  BACKEND_IMPLEMENTATION.md  BACKEND_IMPLEMENTATION_SUMMARY.md  Bias_Fairness_Scoring_Report.docx  COMPARISON_LIST_FEATURE.md  Code_Vulnerability_Complete_Report.docx  Compliance_Score_Test_Report.docx  Context_Adherence_Test_Results.docx  Context_Adherence_Test_Results_With_Explanations.docx  EMBEDDING_STORAGE_FLOW.md  ENV_SETUP.md  FEATURE_ROUTES.md  FRONTEND_IMPLEMENTATION_PROMPT.md  FRONTEND_INTEGRATION_PROMPT.md  FRONTEND_PLAN.md  IMPLEMENTATION_SUMMARY.md  JUDGE_API_ENDPOINTS.md  PROMPT_REVIEW.md  QUICK_SETUP.md  README.md  README_WINDOWS.md  Reasoning_Quality_Scoring_Report.docx  SCORE_CALCULATION_DOCUMENTATION.md  SCORE_CALCULATION_MOBILE.txt  SUPABASE_SETUP.md  Safety_Score_Test_Results.docx  code_vulnerability_test_results.json  contradictory_info_test_results.docx  docker-compose.yml  external_fact_check_results.docx  fabricated_citations_test_results.docx  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.bat  (+4 more)
.cursor/: rules.yaml
app/: __init__.py  config.py  judge_system_prompts.py  main.py  models.py
app/adapters/: base.py  gemini.py  groq.py  huggingface.py  mock.py  openai.py
docs/: API_ROUTES_GUIDE.md  BIAS_VS_FAIRNESS_EXPLANATION.md  CODE_VULNERABILITY_AUDITOR_APPROACHES.md  CODE_VULNERABILITY_IMPLEMENTATION_SUMMARY.md  CODE_VULNERABILITY_TEST_RESULTS.md  DEBUGGING_400_ERROR.md  DIRECT_PROCESSING.md  EXTERNAL_FACT_CHECK_TESTING.md  FABRICATED_CITATIONS_DETAILED_VERIFICATION.md  GROQ_VS_GROK.md  LOCAL_SETUP.md  OPENAI_JUDGE_SETUP.md  SIMILARITY_DETAILED_GUIDE.html  SIMILARITY_IMPLEMENTATION.md  SIMILARITY_QUICK_GUIDE.html  SIMILARITY_QUICK_REFERENCE.md  SIMILARITY_STATISTICS_GUIDE.md  STREAMING_FIX_SUMMARY.md  STREAMING_TROUBLESHOOTING.md  TROUBLESHOOTING_AUTH.md  api_contract.md  architecture.md  judge_rubric.md
scripts/: create_bias_fairness_report_docx.py  create_code_vulnerability_report_docx.py  create_reasoning_quality_report_docx.py  generate_bias_fairness_docx.py  generate_docx_now.py  init_db.py  test_bias_fairness.py  test_code_vulnerability.py  test_compliance_score.py  test_context_adherence.py  test_context_adherence_quick.py  test_contradictory_info.py  test_db_connection.py  test_external_fact_check.py  test_fabricated_citations_detailed.py  test_multi_llm_comparison.py  test_reasoning_quality.py  test_register_endpoint.py  test_safety_score.py  test_safety_score_quick.py
system/: SYSTEM.md
tests/: test_audit_endpoint.py  test_external_fact_check.py  test_fabricated_citations.py
(+233 files in other folders)
