[project]
name = "project-w"
version = "0.1.0"
description = "Enterprise multi-LLM audit and evaluation control plane."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Project W Team" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7",
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.4",
  "boto3>=1.34.131",
  "pgvector>=0.2.5",
  "tenacity>=8.3.0",
  "orjson>=3.10.3",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "ruff>=0.4.8",
  "mypy>=1.10.1"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

