[project]
name = "project-w"
version = "0.1.0"
description = "Enterprise multi-LLM audit and evaluation control plane."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Project W Team" }
]
dependencies = [
  # Web Framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  # Data Validation & Settings
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  # HTTP & Networking
  "httpx>=0.27.0",
  # Logging
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7",
  # Monitoring & Metrics
  "prometheus-client>=0.20.0",
  # Database
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",
  "pgvector>=0.2.5",
  "supabase>=2.0.0",
  # Caching & Task Queue
  "redis>=5.0.4",
  "celery>=5.3.4",
  # Storage
  "boto3>=1.34.131",
  # Utilities
  "tenacity>=8.3.0",
  "orjson>=3.10.3",
  "numpy>=1.24.0",
  # Authentication & Security
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "email-validator>=2.0.0",
  # AI/LLM Providers
  "openai>=1.0.0",
  "google-generativeai>=0.3.0",
  "anthropic>=0.7.7",
  # External Fact Check Feature
  "duckduckgo-search>=6.0.0",
  "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "ruff>=0.4.8",
  "mypy>=1.10.1"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

